fix: fix jump to present msg margin

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,6 +1,5 @@
 @import url("https://raw.githack.com/hormelcookies/dark-discord/hormelcookies-patch-1/src/source.css");
 @import url("https://raw.githack.com/Freeplayg/Discord-TeardropMessages/main/theme.css");
-@import url("https://tropix126.github.io/BetterDiscordStuff/materialcons/base.css");
 
 .theme-dark,
 .theme-light,
@@ -177,9 +176,10 @@ button[aria-label="Select emoji"] {
     overflow: visible !important;
 }
 
-.form-2fGMdU .channelTextArea-rNsIhG,
-.jumpToPresentBar-G1R9s6 {
-    margin-left: 36px;
+.chat-3bRxxu .form-2fGMdU .channelTextArea-rNsIhG,
+.chat-3bRxxu .jumpToPresentBar-G1R9s6 {
+    margin-left: 36px !important;
+    margin-right: -36px !important;
 }
 
 .jumpToPresentBar-G1R9s6,
@@ -269,12 +269,10 @@ a[href^="http://"] {
     margin-top: 0px !important;
 }
 
-.threadSidebar-1o3BTy .form-2fGMdU .channelTextArea-rNsIhG, .jumpToPresentBar-G1R9s6 {
+.chat-3bRxxu.threadSidebarOpen-vdkwIh .form-2fGMdU .channelTextArea-rNsIhG,
+.chat-3bRxxu.threadSidebarOpen-vdkwIh .jumpToPresentBar-G1R9s6 {
     margin-left: 0px !important;
-}
-
-.chat-3bRxxu.threadSidebarOpen-vdkwIh .form-2fGMdU .channelTextArea-rNsIhG, .jumpToPresentBar-G1R9s6 {
-    margin-left: 0px !important;
+    margin-right: 0px !important;
 }
 
 /** OTHER SHIT */
